--- a/frontend/crud-sample/package.json
+++ b/frontend/crud-sample/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "json-server": "json-server --port 3001 --watch db.json",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "homepage": "https://satouyuuki.github.io/react-crud/",
