--- a/simple-crud/package.json
+++ b/simple-crud/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node server.js"
+    "start": "babel-node server.js",
+    "dev": "nodemon --exec babel-node server.js"
   },
   "keywords": [],
   "author": "",
